# EVB-LAN9646

./: README  README.md  sam9x75_nand_setup.txt
buildroot-at91-linux4microchip-2023.10/package/: Config.in.host
buildroot-external-microchip/: Config.in
buildroot-external-microchip/configs/: sam9x75_curiosity_6_1_good_defconfig  sam9x75_curiosity_defconfig  sam9x75_curiosity_good_defconfig  sam9x75_curiosity_mmc_defconfig  sam9x75_curiosity_mmc_good_defconfig  sama5d3_eds_6_6_headless_defconfig  sama5d3_xplained_6_6_headless_defconfig
buildroot-mchp-linux4microchip-2025.04/package/: Config.in.host
ung_apps_external/: .gitignore  Config.in  external.desc  external.mk  flash.sh  nandflash-usb.qml  sdprog.sh
ung_apps_external/cmake_apps/ef-loop/: CMakeLists.txt  README.adoc
ung_apps_external/configs/: atmel_sama5d3_xplained_ksz_4_14_defconfig  atmel_sama5d3_xplained_ksz_4_14_mmc_defconfig  atmel_sama5d3_xplained_ksz_4_19_defconfig  atmel_sama5d3_xplained_ksz_4_19_mmc_defconfig  atmel_sama5d3_xplained_ksz_5_10_defconfig  atmel_sama5d3_xplained_ksz_5_10_mmc_defconfig  atmel_sama5d3_xplained_ksz_5_15_defconfig  atmel_sama5d3_xplained_ksz_5_15_mmc_defconfig  atmel_sama5d3_xplained_ksz_5_4_defconfig  atmel_sama5d3_xplained_ksz_5_4_mmc_defconfig  atmel_sama5d3_xplained_ksz_6_12_defconfig  atmel_sama5d3_xplained_ksz_6_12_mmc_defconfig  atmel_sama5d3_xplained_ksz_6_1_defconfig  atmel_sama5d3_xplained_ksz_6_1_mmc_defconfig  atmel_sama5d3_xplained_ksz_6_6_defconfig  atmel_sama5d3_xplained_ksz_6_6_mmc_defconfig  atmel_sama5d3_xplained_lan9646_6_1_defconfig  (+32 more)
(+322 files in other folders)
